# build-scripts

./: .travis.yml
.github/: pull_request_template.md
.github/workflows/: currency-build.yaml  pr-build.yml  pr-expiry.yaml
a/abseil-cpp/: abseil-cpp_ubi_9.3.sh
a/antlr4/: antlr4_4.13.2_ubi_9.3.sh
a/apache-http-server/: build_info.json
c/cachetools/: build_info.json  cachetools_v6.0.0_ubi_9.7.sh
c/cadvisor/: build_info.json
c/certifi/: build_info.json  certifi_2025.01.31_ubi_9.7.sh
c/cffi/: LICENSE  build_info.json  cffi_ubi_9.7.sh
c/cfgv/: build_info.json  cfgv_ubi_9.7.sh
c/consul/: build_info.json
c/cryptography/: build_info.json  cryptography_ubi_9.7.sh
c/cycler/: build_info.json  cycler_ubi_9_7.sh
d/doxygen/: build_info.json  doxygen_ubi_9.3.sh
e/erlang/: build_info.json  erlang_ubi_9.3.sh
f/fonttools/: build_info.json  fonttools_ubi_9.7.sh
f/frozendict/: build_info.json  frozendict_ubi_9.7.sh
g/gmpy/: build_info.json  gmpy_ubi_9.7.sh
g/grpc-cpp/: grpc-cpp_ubi_9.3.sh
gha-script/: build_wheels.py  build_wheels.sh  create_wheel_wrapper.sh  generate_build_info.py  node_bs.py  post_process_wheel.py  pre_process.sh  read_buildinfo.sh  trigger_container.py  validate_builds.py  validate_builds_currency.py
gha-script/ci/: parse_build_info.py
gha-script/download-scripts/: download_docker_image.sh  download_file.sh  download_wheels.sh
l/libidn2/: build_info.json  libidn2_ubi_9.7.sh  pyproject.toml
process_bom/: COSWrapper.py  ca_config.py
templates/: build_info_template.json
travis-currency-ymls/: currency-build.yml
(+50 files in other folders)
