# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "setuptools",
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "libidn2"
version = "{PACKAGE_VERSION}"

#One line description
description = "Implementation of IDNA2008 internationalized domain names"

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
]

#Project URLs
[project.urls]
homepage = "https://gitlab.com/libidn/libidn2"
upstream = "https://gitlab.com/libidn/libidn2"

#Find packages files in local folder, this is needed as we are not following standard directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

#Package data to add all files in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
libidn2 = ["**/*"]

[tool.distutils.bdist_wheel]
plat-name = "linux_s390x"  # Explicitly set the platform tag
universal = false  # Disable universal wheel (forces platform-specific build)